--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-solflare": "^0.6.28",
     "@tabler/icons-react": "^3.2.0",
+    "dotenv": "^16.4.5",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
