--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/lang-json": "^6.0.1",
     "@mantine/charts": "^7.8.1",
     "@mantine/core": "^7.8.1",
     "@mantine/dropzone": "^7.8.1",
     "@mantine/form": "^7.8.1",
     "@mantine/hooks": "^7.8.1",
+    "@monaco-editor/react": "^4.6.0",
     "@shadow-drive/sdk": "^5.0.0",
     "@solana/spl-token": "^0.4.6",
     "@solana/spl-token-registry": "^0.2.4574",
@@ -21,6 +23,11 @@
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-solflare": "^0.6.28",
     "@tabler/icons-react": "^3.2.0",
+    "@uiw/codemirror-theme-atomone": "^4.22.0",
+    "@uiw/codemirror-theme-dracula": "^4.22.0",
+    "@uiw/codemirror-theme-tokyo-night": "^4.22.0",
+    "@uiw/codemirror-theme-vscode": "^4.22.0",
+    "@uiw/react-codemirror": "^4.22.0",
     "dotenv": "^16.4.5",
     "next": "14.2.2",
     "react": "^18",
