--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
