--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@shadow-drive/sdk": "^5.0.0",
     "@solana/spl-token": "^0.4.6",
     "@solana/spl-token-registry": "^0.2.4574",
+    "@solana/wallet-adapter-backpack": "^0.1.14",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-solflare": "^0.6.28",
